Filter CircleCI by master branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,17 +56,17 @@ workflows:
             - test
           filters:
             branches:
-              only: main
+              only: master
       - hold:
           type: approval
           requires:
             - prerelease
           filters:
             branches:
-              only: main
+              only: master
       - release:
           requires:
             - hold
           filters:
             branches:
-              only: main
+              only: master
